internal/kgateway/translator/gateway/testutils/outputs/backends/backend-port-not-found-err.yaml
Clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_example-service_8080
  type: EDS
- connectTimeout: 5s
  metadata: {}
  name: test-backend-plugin_default_example-svc_80
Listeners:
  - address:
      socketAddress:
        address: '::'
        ipv4Compat: true
        portValue: 80
    filterChains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              httpFilters:
                - name: envoy.filters.http.router
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              mergeSlashes: true
              normalizePath: true
              rds:
                configSource:
                  ads: {}
                  resourceApiVersion: V3
                routeConfigName: listener~80
              statPrefix: http
              useRemoteAddress: true
        name: listener~80
    name: listener~80
Routes:
  - ignorePortInHostMatching: true
    name: listener~80
    virtualHosts:
      - domains:
          - test.example.com
        name: listener~80~test_example_com
        routes:
          - match:
              prefix: /
            name: listener~80~test_example_com-route-0-httproute-example-route-default-0-0-matcher-0
            route:
              cluster: blackhole-cluster
              clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
Statuses:
  gateways:
    default/example-gateway:
      conditions:
        - lastTransitionTime: null
          message: ""
          reason: ListenerSetsNotAllowed
          status: Unknown
          type: AttachedListenerSets
        - lastTransitionTime: null
          message: Successfully accepted Gateway
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully programmed Gateway
          reason: Programmed
          status: "True"
          type: Programmed
      listeners:
        - attachedRoutes: 1
          conditions:
            - lastTransitionTime: null
              message: Successfully accepted Listener
              reason: Accepted
              status: "True"
              type: Accepted
            - lastTransitionTime: null
              message: Successfully verified that Listener has no conflicts
              reason: NoConflicts
              status: "False"
              type: Conflicted
            - lastTransitionTime: null
              message: Successfully resolved all references
              reason: ResolvedRefs
              status: "True"
              type: ResolvedRefs
            - lastTransitionTime: null
              message: Successfully programmed Listener
              reason: Programmed
              status: "True"
              type: Programmed
          name: http
          supportedKinds:
            - group: gateway.networking.k8s.io
              kind: HTTPRoute
            - group: gateway.networking.k8s.io
              kind: GRPCRoute
  httpRoutes:
    default/example-route:
      parents:
        - conditions:
            - lastTransitionTime: null
              message: port 9999 of Backend "example-svc" is not defined
              reason: BackendPortNotFound
              status: "False"
              type: ResolvedRefs
            - lastTransitionTime: null
              message: Successfully accepted Route
              reason: Accepted
              status: "True"
              type: Accepted
          controllerName: kgateway
          parentRef:
            group: ""
            kind: ""
            name: example-gateway
